# python-pro-dz-14

./: .env.example  README.md  manage.py  pyproject.toml
pythonpro_dz_14/: asgi.py  settings.py  urls.py  wsgi.py
